--- a/apps/templates/pages/tool/includes/NSPTDetails.html
+++ b/apps/templates/pages/tool/includes/NSPTDetails.html
@@ -60,7 +60,7 @@
                     \(C_{N} = \frac{3}{2+\sigma'_{v0}(TSF)} \) For Overconsolidated (OE) soil. <br>
                 </ol>
                 <div class="card-header">
-                    <img class="img" src="{% static "assets/img/nsptmore_1.png" %}">
+                    <img class="img" width= "100%"src="{% static "assets/img/nsptmore_1.png" %}">
                 </div>
             </div>
             <div class="col-md-5 ml-auto mr-auto">
