design changes for section

--- a/apps/templates/includes/project/projectmap.html
+++ b/apps/templates/includes/project/projectmap.html
@@ -39,6 +39,10 @@
                     onclick='window.location.href="/media/{{ ags.path }}"'>
                     <i class="material-icons">download</i>
                   </button>
+                  <button type="button" rel="tooltip" class="btn" data-original-title="" title=""
+                  onclick='window.location.href="{% url 'edit-project-ags-micro' ags.pid ags.id %}"'>
+                  <i class="material-icons">art_track</i>
+                </button>
                 </td>
               </tr>
               {% endfor %}
