--- a/apps/templates/layouts/base-landing-nikos.html
+++ b/apps/templates/layouts/base-landing-nikos.html
@@ -14,6 +14,15 @@
 <!-- Icons from the web -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="https://kit.fontawesome.com/234e9ca2cf.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JY31PR7RZV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JY31PR7RZV');
+</script>
 
 <style>
 	body,
