--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -24,6 +24,15 @@
   <link href="/static/assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="/static/assets/demo/demo.css" rel="stylesheet" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JY31PR7RZV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JY31PR7RZV');
+</script>
 
   {% block stylesheets %}{% endblock stylesheets %}
   
