--- a/apps/templates/pages/project/microags.html
+++ b/apps/templates/pages/project/microags.html
@@ -32,18 +32,16 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header card-header-icon card-header-rose">
-                <h4 class="card-title ">Simple Table</h4>
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table" id="datatable_permissions">
-                        
-                    </table>
-                </div>
+<div class="col-md-12 col-12 mr-auto ml-auto">
+    <div class="card">
+        <div class="card-header card-header-icon card-header-rose">
+            <h4 class="card-title ">Simple Table</h4>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table" id="datatable_permissions">
+
+                </table>
             </div>
         </div>
     </div>
@@ -59,12 +57,12 @@
     for (i = 0; i < headings.length; i++) {
         $('#select-heading').append($('<option>', { value: headings[i], text: headings[i] }));
     }
-  </script>
+</script>
 
 <script language="javascript">
 
-    $(document).ready(function() {
-       
+    $(document).ready(function () {
+
     });
 
 </script>
