--- a/apps/templates/pages/tool/FrictionAngle.html
+++ b/apps/templates/pages/tool/FrictionAngle.html
@@ -49,7 +49,11 @@
                                 enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="row tool-form">
-                                    <div class="col-md-7">
+                                    <div class="col-md-2">
+                                        <div class="card-header">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-8">
                                         {% for message in messages %}
                                             <div class="alert alert-rose">
                                                 <button type="button" class="close" data-dismiss="alert"
@@ -156,7 +160,7 @@
                                             <button class="btn btn-rose" type="button" onclick="Calculate()">Calculate</button>
                                         </div>
                                     </div>
-                                    <div class="col-md-5">
+                                    <div class="col-md-2">
                                         <div class="card-header">
                                         </div>
                                     </div>
