--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -40,7 +40,7 @@
         <a class="nav-link" href="{% url 'tools' %}">
           <i class="material-icons">widgets</i><span class="sidebar-normal"> Tools </span>
         </a>
-        </li>
+      </li>
       <li class="nav-item {% if '/user' in request.path %}active{% endif %}">
         <a class="nav-link" data-toggle="collapse" href="#users">
           <i class="material-icons">person</i>
@@ -78,6 +78,11 @@
         </a>
       </li>
       {% endif %}
+      <li class="nav-item " style="position: absolute; bottom: 0;">
+        <a class="nav-link" href="{% url 'policy' %}">
+          <p>Policy and Privacy</p>
+        </a>
+      </li>
     </ul>
   </div>
 
