--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -92,7 +92,7 @@
       </div>
     </div>
   </section>
-  <section class="py-3">
+  <!-- <section class="py-3">
     <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -185,11 +185,11 @@
 
     </div>
   </div>
-  </section>
+  </section> -->
 
 </div>
 
-<section class="py-lg-5">
+<!-- <section class="py-lg-5">
   <div class="container">
     <div class="row">
       <div class="col">
@@ -289,5 +289,5 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 {% endblock content %}
